# musubi

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
docs/plans/: 2026-01-08-archive-mode-design.md  2026-01-08-archive-mode.md  2026-01-08-musubi-design.md  2026-01-08-musubi-implementation.md  2026-01-08-project-summary.md  2026-03-01-adaptive-summary-prompt.md  2026-05-04-config-file.md
src/: archive.rs  config.rs  error.rs  fetch.rs  lib.rs  main.rs  now.rs  parse.rs  summarize.rs  writer.rs
tests/: archive_integration_tests.rs  archive_tests.rs  cli_tests.rs  config_tests.rs  fetch_tests.rs  integration_tests.rs  now_tests.rs  parse_tests.rs  summarize_tests.rs  writer_tests.rs
