[package]
name = "musubi"
version = "0.1.0"
edition = "2021"
authors = ["Axel Anderson <axel@ftml.net>"]
description = "Save and summarize web links to markdown files"
license = "MIT"
repository = "https://github.com/axelav/musubi"
keywords = ["cli", "markdown", "llm", "bookmarks"]
categories = ["command-line-utilities"]

[[bin]]
name = "musubi"
path = "src/main.rs"

[lib]
name = "musubi"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.20"
url = "2.5"
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
deunicode = "1.4"

[dev-dependencies]
tempfile = "3.13"
