[package]
name = "musubi"
version = "0.3.0"
edition = "2021"
authors = ["Axel Anderson <axel@ftml.net>"]
description = "Save and summarize web links to markdown files"
license = "MIT"
repository = "https://github.com/axelav/musubi"
keywords = ["cli", "markdown", "llm", "bookmarks"]
categories = ["command-line-utilities"]

[[bin]]
name = "musubi"
path = "src/main.rs"

[lib]
name = "musubi"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
scraper = "0.20"
url = "2.5"
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
schemars = "0.8"
deunicode = "1.4"
shlex = "1.3"
toml = "0.8"
shellexpand = "3"

[dev-dependencies]
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.0"
temp-env = "0.3"
